k8s/infra/monitoring/kiali-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali-http-redirect
  labels:
    app: kiali
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-to-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: kiali.opsdev.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kiali
                port:
                  number: 20001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali-ui-production
  labels:
    app: kiali
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/service.passhostheader: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-compress@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - kiali.opsdev.fr
      secretName: kiali-production-tls-secret
  rules:
    - host: kiali.opsdev.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kiali
                port:
                  number: 20001
